--- a/chart/index.html
+++ b/chart/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Chart Builder</title>
-	<link rel='stylesheet' id='theme-css-css'  href='css/fonts.css' type='text/css' media='all' />
+	<!-- <link rel='stylesheet' id='theme-css-css'  href='css/fonts.css' type='text/css' media='all' /> -->
+	<link rel='stylesheet' id='theme-css-css'  href='css/stylesheet.css' type='text/css' media='all' />
 	<script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js" defer></script>
 	<script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js" defer></script>
 
@@ -15,7 +16,8 @@
 <style type="text/css">
 	body{
 		background-color: #dedede;
-		font-family: 'Gilroy' sans-serif;
+		/*font-family: 'Gilroy';*/
+		font-family: 'gilroyregular';
 		margin: 0;
 		display: flex;
 		flex-direction: column;
