Update css for mobile view

--- a/philippines-election/index.html
+++ b/philippines-election/index.html
@@ -149,6 +149,9 @@
 			}
 		}
 		@media screen and (max-width: 499px){
+			.swiper{
+				padding: 0 0 30px;
+			}
 			.swiper-slide{
 				flex-direction: column;
 				padding: 0;
@@ -156,6 +159,9 @@
 				background-position: top;
 				align-items: flex-end;
 				background-image: none;
+			}
+			.swiper-button{
+				display: none;
 			}
 			.picBox{
 				display: block;
