--- a/philippines-election/index.html
+++ b/philippines-election/index.html
@@ -183,8 +183,8 @@
 			<div class="picBox slide_01"></div>
 			<div class="textCol rightCol">
 				<h1>Philippines Presidential Election</h1>
-				<p>Following the volatile presidency of Rodrigo Duterte, Filipinos head to the polls on Sunday, May 9 to elect a new president <span class="bold italic">and vice president</span>.</p>
-				<p>Serving just one six-year term, voters have been offered a unique line-up of candidates, ranging from the son of a former dictator to a boxing world champion and an anti-poverty campaigner hoping to drag the country through the pandemic. </p>
+				<p>Following the volatile presidency of Rodrigo Duterte, Filipinos head to the polls on Sunday, May 9 to elect a new president for a six year term.<span class="bold italic">and vice president</span>.</p>
+				<p>Voters have been offered a unique line-up of candidates, ranging from the son of a former dictator to a boxing world champion and an anti-poverty campaigner hoping to drag the country through the pandemic. </p>
 				<p>Meet the main candidates.</p>
 			</div>
 		</div>
