--- a/philippines-election/demo.html
+++ b/philippines-election/demo.html
@@ -11,6 +11,6 @@
 	</style>
 </head>
 <body>
-<iframe src="index.html" width="100%" height="600px" scrolling="no" style="border:none;" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px"></iframe>
+<iframe src="https://newsnet-bucket.s3.ap-southeast-2.amazonaws.com/2022/05/philippines-election/index.html" width="100%" height="600px" scrolling="no" style="border:none;" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px"></iframe>
 </body>
 </html>
